# net-ssa

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-souffle  LICENSE  README.md  net-ssa.sln
.github/: GitVersion.yml  gitversion.yml
.github/workflows/: build.yml  docker-ubuntu.yml
benchmark-cli/: BodyWrapper.cs  Iterator.cs  Program.cs  SsaConstructionBenchmark.cs  benchmark-cli.csproj
ci/: build-image.sh  build.sh  install-cmake.sh  install-lit.sh  install-llvm.sh  install-mingw32.sh  install-mono.sh  install-souffle.sh  nuget-pack.sh  tmp-container.sh
ci/docker/: Dockerfile  Dockerfile.base
cmake/: FindDotnet.cmake  FindSouffle.cmake
integration-test/: lit.cfg.py  lit.site.cfg.py.in
integration-test/net-ssa-cli/disassemble/all/test0/: Test.cs
integration-test/net-ssa-cli/disassemble/all/test1/: Test.cs
integration-test/net-ssa-cli/disassemble/all/test2/: Test.cs
integration-test/net-ssa-cli/disassemble/all/test3/: Test.cs
integration-test/net-ssa-cli/disassemble/all/test4/: Test.il
integration-test/net-ssa-cli/disassemble/exceptions/test0/: Test.cs
integration-test/net-ssa-cli/disassemble/exceptions/test1/: Test.cs
integration-test/net-ssa-cli/disassemble/ir/: Test.cs
integration-test/net-ssa-cli/disassemble/test0/: Test.cs
integration-test/net-ssa-lib/live-variables/test0/: program.cs.exclude  test.cs
integration-test/test0/: Test.cs
net-ssa-cli/: Datalog.cs  Disassemble.cs  Iterator.cs  List.cs  PrintCfg.cs  Program.cs  Statistics.cs  net-ssa-cli.csproj
net-ssa-lib/: net-ssa-lib.csproj
net-ssa-lib/analyses/: Bytecode.cs  ControlFlowGraph.cs  DataFlowAnalysis.cs  Dominance.cs  Edges.cs  IR.cs  IntermediateRepresentation.cs  LiveVariableAnalysis.cs  LowestCommonAncestor.cs  MemoryVariable.cs  Register.cs  Ssa.cs  SsaVerifier.cs  StackTypeInference.cs  Successor.cs  ThreeAddressCode.cs  Unstacker.cs  ValueContainer.cs  Variable.cs  VariableDefUse.cs
net-ssa-lib/facts/: SsaFacts.cs
net-ssa-lib/instructions/: BytecodeInstruction.cs  ControlFlowInstruction.cs  LabelInstruction.cs  PhiInstruction.cs  TacInstruction.cs
net-ssa-lib/io/: FileIO.cs
net-ssa-lib/queries/: SsaQuery.cs  SsaQueryException.cs
net-ssa-lib/reflection/: ClassHierarchy.cs  DefaultMetadataLoadContext.cs  Importer.cs  TypeAdapter.cs
net-ssa-lib/transformations/: SsaForm.cs
souffle/: CMakeLists.txt  build-all-with-docker.sh  build-souffle-linux-x86-64.sh  build-souffle-macos-x86-64-arm64.sh  build-souffle-windows-x86-64.sh  build.py
souffle/src/: instruction-sequence.inc  ssa-query.dl
test-resources/: README
unit-test/: BasicTests.cs  Tests.cs  TypeMergeTests.cs  unit-test.csproj
(+42 files in other folders)
